Fix aria-labels wrong placement

--- a/books/templates/books/base.html
+++ b/books/templates/books/base.html
@@ -137,23 +137,23 @@
       </a>
       <!-- X-Twitter -->
       <a class="btn text-white btn-floating m-1" style="background-color: #55acee" href="https://twitter.com/tom_du3"
-         target="_blank" role="button">
-        <i class="fa-brands fa-x-twitter"  aria-label="X-Twitter link"></i>
+         target="_blank" role="button" aria-label="X-Twitter link">
+        <i class="fa-brands fa-x-twitter"></i>
       </a>
       <!-- Instagram -->
       <a class="btn text-white btn-floating m-1" style="background-color: #ac2bac"
-         href="https://www.instagram.com/007idkfa/" target="_blank" role="button">
-        <i class="fab fa-instagram"  aria-label="Instagram link"></i>
+         href="https://www.instagram.com/007idkfa/" target="_blank" role="button" aria-label="Instagram link">
+        <i class="fab fa-instagram"></i>
       </a>
       <!-- Linkedin -->
       <a class="btn text-white btn-floating m-1" style="background-color: #0082ca"
-         href="https://www.linkedin.com/in/tomislav-dukez-bb2349231/" target="_blank" role="button">
-        <i class="fab fa-linkedin-in"  aria-label="Linkedin link"></i>
+         href="https://www.linkedin.com/in/tomislav-dukez-bb2349231/" target="_blank" role="button" aria-label="Linkedin link">
+        <i class="fab fa-linkedin-in"></i>
       </a>
       <!-- Github -->
       <a class="btn text-white btn-floating m-1" style="background-color: #333333" href="https://github.com/tomdu3/"
-         target="_blank" role="button">
-        <i class="fab fa-github"  aria-label="Github link"></i>
+         target="_blank" role="button" aria-label="Github link">
+        <i class="fab fa-github"></i>
       </a>
     </div>
   </div>
