--- a/books/templates/books/book_edit.html
+++ b/books/templates/books/book_edit.html
@@ -43,7 +43,7 @@
                 </div>
                 <div class="form-group">
                   <label class="form-label" for="image_url">Image URL:</label>
-                  <input type="file" class="form-control" id="image_url" name="image_url" value="{{ book.image_url }}">
+                  <input type="file" class="form-control" id="image_url" name="image_url">
                 </div>
                 <div class="form-group">
                   <label class="form-label" for="category">Category:</label>
