--- a/books/templates/books/book_edit.html
+++ b/books/templates/books/book_edit.html
@@ -56,7 +56,8 @@
                     {% endfor %}
                   </select>
                 </div>
-                <div class="form-group text-end">
+                <div class="form-group text-end pt-2">
+                  <a href="{% url 'user_page' %}" class="btn btn-danger">Cancel</a>
                   <button type="submit" class="btn btn-primary">Update Book</button>
                 </div>
               </form>
