--- a/books/templates/books/user_page.html
+++ b/books/templates/books/user_page.html
@@ -30,7 +30,7 @@
           </td>
           <td class="small-none h6 align-middle">{{ book.category }}</td>
           <td class="align-middle">
-            <div class="d-flex align-items-center gap-1">
+            <div class="d-flex align-items-center gap-1 justify-content-center">
               <a href="{% url 'book_edit' slug=book.slug %}" class="btn btn-primary btn-sm">Edit</a>
               <a href="{% url 'book_delete_confirmation' book_id=book.id %}" class="btn btn-danger btn-sm">Delete</a>
             </div>
