--- a/authors/templates/user_profile_update.html
+++ b/authors/templates/user_profile_update.html
@@ -13,7 +13,7 @@
                 {% if user.userprofile.profile_image and "profile_image" not in user.userprofile.profile_image.url %}
                   <img id="profileImagePreview" src="{{ user.userprofile.profile_image.url }}" alt="Profile Image"
                        class="rounded-circle d-block mx-auto"> {% else %}
-                  <img id="profileImagePreview" src="https://web-photos-td.s3.eu-north-1.amazonaws.com/user.webp"
+                  <img id="profileImagePreview" src="{% static 'images/user.webp' %}"
                        alt="Profile Image Default" class="rounded-circle d-block mx-auto"> {% endif %}
               </div>
               <div class="mb-3">
