Fix register button on homepage accessibility

--- a/books/templates/books/home.html
+++ b/books/templates/books/home.html
@@ -48,7 +48,7 @@
               <a href="{% url 'user_profile' %}" class="btn btn-danger">My Profile</a>
               {% else %}
               <a href="{% url 'login' %}" class="btn btn-primary">Login</a>
-              <a href="{% url 'register' %}" class="btn btn-outline-secondary">Register</a>
+              <a href="{% url 'register' %}" class="btn btn-secondary">Register</a>
               {% endif %}
           </div>
         </div>
