Fix signup and login pages for accessibility and seo

--- a/authors/templates/authentication/login.html
+++ b/authors/templates/authentication/login.html
@@ -1,10 +1,17 @@
-{% extends 'books/base.html' %} {% load static %} {% block content %}
+{% extends 'books/base.html' %}
+
+{% load static %}
+
+{% block content %}
+
   <div class="container mt-5 col-9 col-md-6 col-lg-4">
     <div class="text-center">
-      <h2>Login</h2>
+      <h1 class="h2">Login</h1>
     </div>
     <div id="loginForm" class="form-container mt-3">
-      <form method="POST"> {% csrf_token %} <input type="hidden" name="form_type" value="login">
+      <form method="POST">
+        {% csrf_token %}
+        <input type="hidden" name="form_type" value="login">
         <div class="mb-3">
           <input type="text" class="form-control" id="loginUsernameEmail" placeholder="User Name or E-mail (required)"
                  name="username_or_email" required>
@@ -15,10 +22,12 @@
         </div>
         <p>
           <button type="submit" class="btn btn-primary"> Login</button>
-          Don't have an account? Click <a
-            class="link-info link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
-            href="{% url 'register' %}">here</a>.
+          Don't have an account? <a
+            class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
+            href="{% url 'register' %}">Register here</a>.
         </p>
       </form>
     </div>
-  </div> {% endblock %}
+  </div>
+
+{% endblock %}
