Fix change color for accessibility buttons

--- a/authors/templates/authentication/login.html
+++ b/authors/templates/authentication/login.html
@@ -23,7 +23,7 @@
         <p>
           <button type="submit" class="btn btn-primary"> Login</button>
           Don't have an account? <a
-            class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
+            class="link-dark fw-bolder link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
             href="{% url 'register' %}">Register here</a>.
         </p>
       </form>
