--- a/authors/templates/authentication/signup.html
+++ b/authors/templates/authentication/signup.html
@@ -13,7 +13,7 @@
       {% csrf_token %}
       {{ form.as_p }}
       <p>
-        <button type="submit" class="btn btn-primary">Register</button> Already registered? <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="{% url 'login' %}">Login here</a>.
+        <button type="submit" class="btn btn-primary">Register</button> Already registered? <a class="link-dark fw-bolder link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="{% url 'login' %}">Login here</a>.
       </p>
     </form>
   </div>
