--- a/books/templates/books/book_delete.html
+++ b/books/templates/books/book_delete.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="container pt-2">
-  <div class="card col-10 col-md-6 mx-auto">
+  <div class="card col-10 col-md-7 mx-auto">
     <h1 class="text-danger text-center">Delete Book</h1>
     <h2 class="text-center">{{ book.title }}</h2>
     <p class="text-center">Author: {{ book.author }}</p>
@@ -16,7 +16,7 @@
       {% endif %}
     </div>
     <div>
-      <p class="ps-3 pt-2">
+      <p class="ps-3 pe-3 pt-2">
         <span class="fst-italic">Short Description:</span>
         {{ book.short_description }}
       </p>
