Fix delete changed to UnFav onf Fav page

--- a/books/templates/books/user_favourites.html
+++ b/books/templates/books/user_favourites.html
@@ -17,7 +17,7 @@
           <th>Author</th>
           <th>Title</th>
           <th class="small-none">Category</th>
-          <th class="text-center">Delete</th>
+          <th class="text-center">UnFav</th>
         </tr>
         </thead>
         <tbody>
