Fix aria-label issue and description

--- a/books/templates/books/base.html
+++ b/books/templates/books/base.html
@@ -7,7 +7,7 @@
   <title>Books for Life</title>
   <meta name="author" content="Tomislav Dukez">
   <meta name="description"
-        content="Explore book reviews on literature and life. Join our community of librophiles and discover your next favorite book.">
+        content="Explore book reviews on literature and life. Join our community of librophiles and discover your next favorite book. On this website, you can add reviews if your favourite books and share them with friends and the world! Dedicated to Grace.">
   <meta name="keywords" content="books, life, literature, librophile, book reviews, Tomislav Dukez">
   
   <!-- Favicon -->
