--- a/books/templates/books/home.html
+++ b/books/templates/books/home.html
@@ -65,13 +65,13 @@
               src="{% static 'images/default-book.webp' )%}"
                    alt="Image of a scolar writing a book">
             </div>
+            <p class="text-center">On this website, you can add reviews if your favourite books and share them with friends and the world!</p>
           </div>
         </div>
       </div>
     </div>
     <div class="row justify-content-center">
-      <div class="container text-center mx-auto col-md-6 pt-md-5 lh-lg fst-italic"
-      aria-label="dedication of the Site to Grace">
+      <div class="container text-center mx-auto col-md-6 pt-md-5 lh-lg fst-italic">
         <p> In August of this year, I sadly lost my dear friend Grace. A decade ago, she gifted me a bookmark with a
           list of 50 books one should read in a lifetime. It is this touching memory that inspired the creation of this
           website. </p>
