Fix type on homepage

--- a/books/templates/books/home.html
+++ b/books/templates/books/home.html
@@ -65,7 +65,7 @@
               src="{% static 'images/default-book.webp' )%}"
                    alt="Image of a scolar writing a book">
             </div>
-            <p class="text-center">On this website, you can add reviews if your favourite books and share them with friends and the world!</p>
+            <p class="text-center">On this website, you can add reviews of your favourite books and share them with friends and the world!</p>
           </div>
         </div>
       </div>
