Fix navbar code reference in base template

--- a/books/templates/books/base.html
+++ b/books/templates/books/base.html
@@ -39,6 +39,8 @@
 
 <body class="h-100 d-flex flex-column">
 
+<!-- code adapted from https://getbootstrap.com/docs/5.0/examples/navbars/ -->
+
 <!-- navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
